python/nanousd/ffi.py


# /home/anders/code/nanousd/nanousd-types.h: 148
try:
    NUSD_TYPE_VECTOR3H = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_TYPE_VECTOR3H")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 149
try:
    NUSD_TYPE_VECTOR3HARRAY = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_TYPE_VECTOR3HARRAY")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 151
try:
    NUSD_TYPE_RELATIONSHIP = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_TYPE_RELATIONSHIP")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 153
try:
    NUSD_COLORSPACE_LINEAR_AP1 = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_COLORSPACE_LINEAR_AP1")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 154
try:
    NUSD_COLORSPACE_LINEAR_AP0 = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_COLORSPACE_LINEAR_AP0")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 155
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_LINEAR_REC709 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_LINEAR_REC709")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 156
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_LINEAR_P3D65 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_LINEAR_P3D65")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 157
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_LINEAR_REC2020 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_LINEAR_REC2020")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 158
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_LINEAR_ADOBERGB = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_LINEAR_ADOBERGB")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 159
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_LINEAR_CIEXYZD65 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_LINEAR_CIEXYZD65")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 160
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_LINEAR_DISPLAYP3 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_LINEAR_DISPLAYP3")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 161
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_SRGB_REC709 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_SRGB_REC709")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 162
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_G22_REC709 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_G22_REC709")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 163
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_G18_REC709 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_G18_REC709")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 164
try:
    NUSD_COLORSPACE_SRGB_AP1 = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_COLORSPACE_SRGB_AP1")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 165
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_G22_AP1 = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_G22_AP1")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 166
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_G22_ADOBERGB = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_G22_ADOBERGB")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 167
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_IDENTITY = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_IDENTITY")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 168
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_DATA = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_DATA")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 169
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_RAW = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_RAW")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 170
try:
    NUSD_COLORSPACE_SRGB = (nusd_type_t).in_dll(_libs["nanousd"], "NUSD_COLORSPACE_SRGB")
except:
    pass

# /home/anders/code/nanousd/nanousd-types.h: 171
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_UNKNOWN = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_UNKNOWN")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-types.h: 172
for _lib in _libs.values():
    try:
        NUSD_COLORSPACE_CIEXYZ = (nusd_type_t).in_dll(_lib, "NUSD_COLORSPACE_CIEXYZ")
        break
    except:
        pass

# /home/anders/code/nanousd/nanousd-iterators.h: 17
class struct_nusd_prim_iterator_s(Structure):
    pass

nusd_prim_iterator_t = POINTER(struct_nusd_prim_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 17

# /home/anders/code/nanousd/nanousd-iterators.h: 18
class struct_nusd_property_iterator_s(Structure):
    pass

nusd_property_iterator_t = POINTER(struct_nusd_property_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 18

# /home/anders/code/nanousd/nanousd-iterators.h: 19
class struct_nusd_attribute_iterator_s(Structure):
    pass

nusd_attribute_iterator_t = POINTER(struct_nusd_attribute_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 19

# /home/anders/code/nanousd/nanousd-iterators.h: 20
class struct_nusd_relationship_iterator_s(Structure):
    pass

nusd_relationship_iterator_t = POINTER(struct_nusd_relationship_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 20

# /home/anders/code/nanousd/nanousd-iterators.h: 21
class struct_nusd_relationship_targets_iterator_s(Structure):
    pass

nusd_relationship_targets_iterator_t = POINTER(struct_nusd_relationship_targets_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 21

# /home/anders/code/nanousd/nanousd-iterators.h: 22
class struct_nusd_token_array_iterator_s(Structure):
    pass

nusd_token_array_iterator_t = POINTER(struct_nusd_token_array_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 22

# /home/anders/code/nanousd/nanousd-iterators.h: 23
class struct_nusd_asset_path_array_iterator_s(Structure):
    pass

nusd_asset_path_array_iterator_t = POINTER(struct_nusd_asset_path_array_iterator_s)# /home/anders/code/nanousd/nanousd-iterators.h: 23

# /home/anders/code/nanousd/nanousd-iterators.h: 36
if _libs["nanousd"].has("nusd_prim_iterator_next", "cdecl"):
    nusd_prim_iterator_next = _libs["nanousd"].get("nusd_prim_iterator_next", "cdecl")
    nusd_prim_iterator_next.argtypes = [nusd_prim_iterator_t, POINTER(POINTER(c_char))]
    nusd_prim_iterator_next.restype = c_bool

# /home/anders/code/nanousd/nanousd-iterators.h: 48
if _libs["nanousd"].has("nusd_prim_iterator_destroy", "cdecl"):
    nusd_prim_iterator_destroy = _libs["nanousd"].get("nusd_prim_iterator_destroy", "cdecl")
    nusd_prim_iterator_destroy.argtypes = [nusd_prim_iterator_t]
    nusd_prim_iterator_destroy.restype = nusd_result_t

# /home/anders/code/nanousd/nanousd-iterators.h: 64
if _libs["nanousd"].has("nusd_property_iterator_next", "cdecl"):
    nusd_property_iterator_next = _libs["nanousd"].get("nusd_property_iterator_next", "cdecl")
    nusd_property_iterator_next.argtypes = [nusd_property_iterator_t, POINTER(POINTER(c_char)), POINTER(nusd_type_t)]
    nusd_property_iterator_next.restype = c_bool

# /home/anders/code/nanousd/nanousd-iterators.h: 76
if _libs["nanousd"].has("nusd_property_iterator_destroy", "cdecl"):
    nusd_property_iterator_destroy = _libs["nanousd"].get("nusd_property_iterator_destroy", "cdecl")
    nusd_property_iterator_destroy.argtypes = [nusd_property_iterator_t]
    nusd_property_iterator_destroy.restype = nusd_result_t

# /home/anders/code/nanousd/nanousd-iterators.h: 89
if _libs["nanousd"].has("nusd_attribute_iterator_next", "cdecl"):
    nusd_attribute_iterator_next = _libs["nanousd"].get("nusd_attribute_iterator_next", "cdecl")
    nusd_attribute_iterator_next.argtypes = [nusd_attribute_iterator_t, POINTER(POINTER(c_char))]
    nusd_attribute_iterator_next.restype = c_bool

# /home/anders/code/nanousd/nanousd-iterators.h: 101
if _libs["nanousd"].has("nusd_attribute_iterator_destroy", "cdecl"):
    nusd_attribute_iterator_destroy = _libs["nanousd"].get("nusd_attribute_iterator_destroy", "cdecl")
    nusd_attribute_iterator_destroy.argtypes = [nusd_attribute_iterator_t]
    nusd_attribute_iterator_destroy.restype = nusd_result_t

# /home/anders/code/nanousd/nanousd-iterators.h: 114
if _libs["nanousd"].has("nusd_relationship_iterator_next", "cdecl"):
    nusd_relationship_iterator_next = _libs["nanousd"].get("nusd_relationship_iterator_next", "cdecl")
    nusd_relationship_iterator_next.argtypes = [nusd_relationship_iterator_t, POINTER(POINTER(c_char))]
    nusd_relationship_iterator_next.restype = c_bool

# /home/anders/code/nanousd/nanousd-iterators.h: 126
if _libs["nanousd"].has("nusd_relationship_iterator_destroy", "cdecl"):
    nusd_relationship_iterator_destroy = _libs["nanousd"].get("nusd_relationship_iterator_destroy", "cdecl")
    nusd_relationship_iterator_destroy.argtypes = [nusd_relationship_iterator_t]
    nusd_relationship_iterator_destroy.restype = nusd_result_t

# /home/anders/code/nanousd/nanousd-iterators.h: 139
if _libs["nanousd"].has("nusd_relationship_targets_iterator_next", "cdecl"):
    nusd_relationship_targets_iterator_next = _libs["nanousd"].get("nusd_relationship_targets_iterator_next", "cdecl")
    nusd_relationship_targets_iterator_next.argtypes = [nusd_relationship_targets_iterator_t, POINTER(POINTER(c_char))]
    nusd_relationship_targets_iterator_next.restype = c_bool

# /home/anders/code/nanousd/nanousd-iterators.h: 151
if _libs["nanousd"].has("nusd_relationship_targets_iterator_destroy", "cdecl"):
    nusd_relationship_targets_iterator_destroy = _libs["nanousd"].get("nusd_relationship_targets_iterator_destroy", "cdecl")
    nusd_relationship_targets_iterator_destroy.argtypes = [nusd_relationship_targets_iterator_t]
    nusd_relationship_targets_iterator_destroy.restype = nusd_result_t

# /home/anders/code/nanousd/nanousd-iterators.h: 164
if _libs["nanousd"].has("nusd_token_array_iterator_next", "cdecl"):
    nusd_token_array_iterator_next = _libs["nanousd"].get("nusd_token_array_iterator_next", "cdecl")
    nusd_token_array_iterator_next.argtypes = [nusd_token_array_iterator_t, POINTER(POINTER(c_char))]
    nusd_token_array_iterator_next.restype = c_bool

# /home/anders/code/nanousd/nanousd-iterators.h: 175
if _libs["nanousd"].has("nusd_token_array_iterator_size", "cdecl"):
    nusd_token_array_iterator_size = _libs["nanousd"].get("nusd_token_array_iterator_size", "cdecl")
    nusd_token_array_iterator_size.argtypes = [nusd_token_array_iterator_t]
    nusd_token_array_iterator_size.restype = c_size_t

# /home/anders/code/nanousd/nanousd-iterators.h: 187
if _libs["nanousd"].has("nusd_token_array_iterator_destroy", "cdecl"):
    nusd_token_array_iterator_destroy = _libs["nanousd"].get("nusd_token_array_iterator_destroy", "cdecl")
    nusd_token_array_iterator_destroy.argtypes = [nusd_token_array_iterator_t]
    nusd_token_array_iterator_destroy.restype = nusd_result_t

# /home/anders/code/nanousd/nanousd-iterators.h: 200
if _libs["nanousd"].has("nusd_asset_path_array_iterator_next", "cdecl"):
    nusd_asset_path_array_iterator_next = _libs["nanousd"].get("nusd_asset_path_array_iterator_next", "cdecl")
    nusd_asset_path_array_iterator_next.argtypes = [nusd_asset_path_array_iterator_t, POINTER(POINTER(c_char))]
    nusd_asset_path_array_iterator_next.restype = c_bool
